--- a/app/globals.css
+++ b/app/globals.css
@@ -68,14 +68,14 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar: #2563eb;
+  --sidebar-foreground: white;
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-accent: #3b82f6;
+  --sidebar-accent-foreground: white;
   --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --sidebar-ring: oklch(70.9% 0.00008 271.152 / 0);
 }
 
 .dark {
@@ -122,20 +122,19 @@
 }
 
 @font-face {
-  font-family: 'Archivo';
-  src: url('/fonts/Archivo-VariableFont_wdth,wght.ttf');
+  font-family: "Archivo";
+  src: url("/fonts/Archivo-VariableFont_wdth,wght.ttf");
 }
 
 .font-archivo {
-  font-family: 'Archivo';
+  font-family: "Archivo";
 }
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Variable.ttf');
+  font-family: "Satoshi";
+  src: url("/fonts/Satoshi-Variable.ttf");
 }
 
 .font-satoshi {
-  font-family: 'Satoshi';
+  font-family: "Satoshi";
 }
-
